hands-on/k8s/k8s-on-digital-ocean/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: do-sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: YOUR-DOMAIN-NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: do-sample-app-service
            port:
              number: 8080
